<?xml version="1.0" encoding="utf-8"?>
<!--Display that appears when a user clicks on a coupon in the gallery-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@color/colorBlack">


    <LinearLayout
        android:id="@+id/ll_dialog_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/darkMode"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/company_name_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/company_name"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:scrollbarSize="24sp"
            android:layout_marginTop="70dp"
            />
        
        <TextView
            android:id="@+id/coupon_desc_dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/coupon_description"
            android:textSize="18sp"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/call_dialog_btn"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:drawableLeft="@drawable/mobile_call"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medGray"
            android:text="@string/mobile_call"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/location_dialog_btn"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:drawableLeft="@drawable/map"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/medGray"
            android:text="@string/view_location"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_dialog"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@color/colorGold"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />

    <ImageView
        android:id="@+id/expanded_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:contentDescription="Zoom touch to close" />


</RelativeLayout>