<?xml version="1.0" encoding="utf-8"?>
<!--Display that appears when a user clicks on the account settings button-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp"
    android:layout_height="410dp"
    android:layout_gravity="center"
    android:background="#000000">

    <LinearLayout
        android:id="@+id/ll_dialog_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#2e2e2e"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_marginTop="50dp">

        <EditText
            android:id="@+id/usernamename_dialog_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorGreen"
            android:scrollbarSize="24sp"
            android:layout_marginTop="70dp"
            />

        <EditText
            android:id="@+id/password_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:textSize="18sp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorGreen"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <EditText
            android:id="@+id/email_dialog_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:textSize="18sp"
            android:textColorHint="@color/colorWhite"
            android:textColor="@color/colorGreen"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"/>

        <Button
            android:id="@+id/save_acct_changes_btn"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_action_save"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF7B7B7B"
            android:text="Save Changes"
            android:textColor="@color/colorWhite"/>

        <Button
            android:id="@+id/delete_acct_btn"
            android:drawablePadding="20dp"
            android:textAlignment="textStart"
            android:padding="20dp"
            android:drawableLeft="@drawable/ic_action_delete"
            android:layout_gravity="start"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FF7B7B7B"
            android:text="Delete Account"
            android:textColor="@color/colorWhite"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/img_dialog"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/usf_bulls_logo"
        android:padding="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        />


</RelativeLayout>